workspace = { members = ["src/macros", "src/web_scrapping_project","real_life_problem_with_dsa","concurrency","understanding_size_in_rust"] }
[package]
name = "practicse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
array_tool = "1.0.3"
rand = "0.8.5"

