[package]
name = "variance"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lifetimebounds"
path = "src/bin/lifetimebounds.rs"

[[bin]]
name = "impliedbounds"
path = "src/bin/impliedbounds.rs"

[[bin]]
name = "subtypingandvariance"
path = "src/bin/subtypingandvariance.rs"

[[bin]]
name = "contravariance"
path = "src/bin/contravariance.rs"

[[bin]]
name = "Invariance"
path = "src/bin/Invariance.rs"





[dependencies]
